--- a/horaDoDia/style.css
+++ b/horaDoDia/style.css
@@ -28,6 +28,10 @@ img {
     height: 300px;
     width: 300px;
     border-radius: 50%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 5px 5px 10px #00000063;
 }
 msg {
     font-size: 18px;
